feat: add detect and add test
